--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
     <!-- App version : <%= version %>, build time : <%= ( new Date( +buildTime ) ).toString() %> -->
     <div id="app-container"></div>
+    <script href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.js"></script>
     <script src="js/polyfills.js?v=<%= buildTime %>"></script>
     <script src="js/vendors.js?v=<%= buildTime %>"></script>
     <script src="js/app.js?v=<%= buildTime %>"></script>
