--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Sites that design themselves</title>
     <meta name="description" content="">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/app.css?v=<%= buildTime %>">
 </head>
 <body>
