--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Sites that design themselves</title>
-    <meta name="description" content="">
+    <title>BlueScreen - Vitrine</title>
+    <meta name="description" content="BlueScreen est une agence de communication coopérative. Elle recherche les meilleurs talents pour les mettre à votre service.">
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/app.css?v=<%= buildTime %>">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="BlueScreen - Vitrine" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bluescreen.co/" />
+    <meta property="og:description" content="BlueScreen est une agence de communication coopérative. Elle recherche les meilleurs talents pour les mettre à votre service." />
+    <meta property="og:site_name" content="BlueScreen" />
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="BlueScreen - Vitrine">
+    <meta name="twitter:description" content="BlueScreen est une agence de communication coopérative. Elle recherche les meilleurs talents pour les mettre à votre service.">
+    <meta name="twitter:creator" content="@thibaudfrere">
 </head>
 <body>
     <!-- App version : <%= version %>, build time : <%= ( new Date( +buildTime ) ).toString() %> -->
