fixe images for gh-pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link rel="stylesheet" href="css/app.css">
     <link rel="icon" href="images/favicon.ico">
+    <style>
+      .isolate>div, .modal {
+        z-index: 999999999!important;
+      }
+    </style>
   </head>
   <body id="doc">
   <svg>
@@ -765,7 +770,7 @@
  </code></pre></div></div></div></div><div class="bloc" id="atom-Vidéo"><h5>Vidéo</h5><hr/><div><div class="two-cols-verticaly-aligned"><div class="wrapper sample">    <div class="video toggle-video">
 			<div class="video-box">
 				<div class="play"></div>
-				<img class="video-cover" src="/images/background/leaf.jpg"/>
+				<img class="video-cover" src="images/background/leaf.jpg"/>
 			</div>
 			<iframe width="400" height="300" src="https://www.youtube.com/embed/cSC95AiLlM0" frameborder="0" allowfullscreen></iframe>
 		</div>
@@ -773,7 +778,7 @@
 	</div><div class="wrapper sample-code"><header><h6 class="desc">HTML</h6><fieldset class="copy" ><button class="button copy-button -line-primary -no-gradient -no-border" data-clipboard-target="#Vidéo-code"><i class="icon -floppy-disk"></i></button><div class="tag -success -pointing -left toggle-copy-success"><span>Copied</span></div></fieldset></header><pre><code class="html" id="Vidéo-code">    &lt;div class=&quot;video toggle-video&quot;&gt;
 	&lt;div class=&quot;video-box&quot;&gt;
 		&lt;div class=&quot;play&quot;&gt;&lt;/div&gt;
-		&lt;img class=&quot;video-cover&quot; src=&quot;/images/background/leaf.jpg&quot;/&gt;
+		&lt;img class=&quot;video-cover&quot; src=&quot;images/background/leaf.jpg&quot;/&gt;
 	&lt;/div&gt;
 	&lt;iframe width=&quot;400&quot; height=&quot;300&quot; src=&quot;https://www.youtube.com/embed/cSC95AiLlM0&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;
 &lt;/div&gt;
@@ -921,7 +926,7 @@
 
  </code></pre></div></div></div></div><div class="bloc" id="molecule-Figure"><h5>Figure</h5><hr/><div><div class="two-cols-verticaly-aligned"><div class="wrapper sample">    <label>Simple</label>
     <figure class="filter -nashville -example">
-      <img class="rotate-img" src="/images/background/leaf.jpg">
+      <img class="rotate-img" src="images/background/leaf.jpg">
       <figcaption>
         <h6 class="title">Title</h6>
         <span class="desc">Dzongsar, Tibet 2004</span>
@@ -930,7 +935,7 @@
     <br/>
     <label>With filter -seventies</label>
     <figure class="filter -seventies -example">
-      <img class="rotate-img" src="/images/background/leaf.jpg">
+      <img class="rotate-img" src="images/background/leaf.jpg">
       <figcaption>
         <h6 class="title">Title</h6>
         <span class="desc">Dzongsar, Tibet 2004</span>
@@ -939,7 +944,7 @@
 
   </div><div class="wrapper sample-code"><header><h6 class="desc">HTML</h6><fieldset class="copy" ><button class="button copy-button -line-primary -no-gradient -no-border" data-clipboard-target="#Figure-code"><i class="icon -floppy-disk"></i></button><div class="tag -success -pointing -left toggle-copy-success"><span>Copied</span></div></fieldset></header><pre><code class="html" id="Figure-code">    &lt;label&gt;Simple&lt;/label&gt;
     &lt;figure class=&quot;filter -nashville -example&quot;&gt;
-      &lt;img class=&quot;rotate-img&quot; src=&quot;/images/background/leaf.jpg&quot;&gt;
+      &lt;img class=&quot;rotate-img&quot; src=&quot;images/background/leaf.jpg&quot;&gt;
       &lt;figcaption&gt;
         &lt;h6 class=&quot;title&quot;&gt;Title&lt;/h6&gt;
         &lt;span class=&quot;desc&quot;&gt;Dzongsar, Tibet 2004&lt;/span&gt;
@@ -948,7 +953,7 @@
     &lt;br/&gt;
     &lt;label&gt;With filter -seventies&lt;/label&gt;
     &lt;figure class=&quot;filter -seventies -example&quot;&gt;
-      &lt;img class=&quot;rotate-img&quot; src=&quot;/images/background/leaf.jpg&quot;&gt;
+      &lt;img class=&quot;rotate-img&quot; src=&quot;images/background/leaf.jpg&quot;&gt;
       &lt;figcaption&gt;
         &lt;h6 class=&quot;title&quot;&gt;Title&lt;/h6&gt;
         &lt;span class=&quot;desc&quot;&gt;Dzongsar, Tibet 2004&lt;/span&gt;
