--- a/index.html
+++ b/index.html
@@ -1433,7 +1433,7 @@
 
 </code></pre></div></div></div></div><div class="bloc" id="modifier-Filter"><h5>Filter</h5><hr/><div><div class="two-cols-verticaly-aligned"><div class="wrapper sample">    <label>Simple</label>
     <figure class="filter -grayscale -example">
-      <img src="/images/background/leaf.jpg">
+      <img src="images/background/leaf.jpg">
       <figcaption>
         <h6 class="title">Title</h6>
         <span class="desc">Dzongsar, Tibet 2004</span>
@@ -1442,7 +1442,7 @@
     <br/>
     <label>With filter -blur</label>
     <figure class="filter -blur -example">
-      <img src="/images/background/leaf.jpg">
+      <img src="images/background/leaf.jpg">
       <figcaption>
         <h6 class="title">Title</h6>
         <span class="desc">Dzongsar, Tibet 2004</span>
@@ -1451,7 +1451,7 @@
 
   </div><div class="wrapper sample-code"><header><h6 class="desc">HTML</h6><fieldset class="copy" ><button class="button copy-button -line-primary -no-gradient -no-border" data-clipboard-target="#Filter-code"><i class="icon -floppy-disk"></i></button><div class="tag -success -pointing -left toggle-copy-success"><span>Copied</span></div></fieldset></header><pre><code class="html" id="Filter-code">    &lt;label&gt;Simple&lt;/label&gt;
     &lt;figure class=&quot;filter -grayscale -example&quot;&gt;
-      &lt;img src=&quot;/images/background/leaf.jpg&quot;&gt;
+      &lt;img src=&quot;images/background/leaf.jpg&quot;&gt;
       &lt;figcaption&gt;
         &lt;h6 class=&quot;title&quot;&gt;Title&lt;/h6&gt;
         &lt;span class=&quot;desc&quot;&gt;Dzongsar, Tibet 2004&lt;/span&gt;
@@ -1460,7 +1460,7 @@
     &lt;br/&gt;
     &lt;label&gt;With filter -blur&lt;/label&gt;
     &lt;figure class=&quot;filter -blur -example&quot;&gt;
-      &lt;img src=&quot;/images/background/leaf.jpg&quot;&gt;
+      &lt;img src=&quot;images/background/leaf.jpg&quot;&gt;
       &lt;figcaption&gt;
         &lt;h6 class=&quot;title&quot;&gt;Title&lt;/h6&gt;
         &lt;span class=&quot;desc&quot;&gt;Dzongsar, Tibet 2004&lt;/span&gt;
